--- a/BTS_SkyTrain.html
+++ b/BTS_SkyTrain.html
@@ -6,16 +6,18 @@
 </head>
 
 <body>
-	# BTS_SkyTrain
-	Visualisation of BTS Skytrain Delayed Data from Twitter official account
+<p>Visualisation of BTS Skytrain Delayed Data from Twitter official account</p>
 
-	Presentation Slide PDF File - Last updated 5 May 2017 (Information Visualization Course, Department of Statistics, Chulalongkorn Business School)
+<p>Presentation Slide PDF File - Last updated 5th May 2017</p>
+<p>(Information Visualization Course, Department of Statistics, Chulalongkorn Business School)</p>
 	
 	
-	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSugcVMWTsROCCEb2_lut4U_afBALAakckE94Wka-XMRhxgcugIaR6EnrWCFIDDsR52iYYHD6LCHDbH/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSugcVMWTsROCCEb2_lut4U_afBALAakckE94Wka-XMRhxgcugIaR6EnrWCFIDDsR52iYYHD6LCHDbH/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	
-	<img src="https://raw.githubusercontent.com/jirapoltee/BTS_SkyTrain/master/VisuliseGIF.gif" width="666.66" height="786" />
-	<img src="https://raw.githubusercontent.com/jirapoltee/BTS_SkyTrain/master/Summary.jpg" width="666.66" height="786" />
+<img
+src="https://raw.githubusercontent.com/jirapoltee/BTS_SkyTrain/master/VisuliseGIF.gif" width="666.66" height="786" />
+
+<img src="https://raw.githubusercontent.com/jirapoltee/BTS_SkyTrain/master/Summary.jpg" width="666.66" height="786" />
 
 
 </body>
